OpenJMLTest/test/gitbug572/expected
test/gitbug572/Fact.java:4: error: illegal start of expression
     *@ensures \result == (\product int i; 0 < i && i <= n; i)
      ^
test/gitbug572/Fact.java:5: error: The expression is invalid or not terminated by a semicolon
     */
     ^
Continuing bravely despite parsing errors
Operation not performed because of parse or type errors
2 errors
